// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.greeth.kit.grpc.signal";
option java_outer_classname = "GServerProto";
option objc_class_prefix = "GSP";

package com.greeth.kit.grpc;

// The signaling service definition.
service EventSignalPublisher {
  // Sends a signal
  rpc publish(EventSignalRequest) returns (EventSignalResponse) {}

}

// The request message containing the topic's name.
message EventSignalRequest {
  string topicName = 1;
}

// The response message containing the list of triggered lambda
message EventSignalResponse {
  string message = 1;
}
